# sensorium

./: .editorconfig  .env.remote.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
ansible/: ansible.cfg  inventory.ini.example  provision.yml
docs/: abi.md  architecture.md  production.md  profile-catalog.md  releasing.md  roadmap.md  runtime-bridge-v2.md  runtime-bridge-v4.md  runtime-bridge-v5.md  scripts.md  testing.md  troubleshooting.md
kernel/: Kconfig  Makefile  sensorium-camera-core.c  sensorium-capture.c  sensorium-config.c  sensorium-core.c  sensorium-family-imx.h  sensorium-iio.c  sensorium-inject.c  sensorium-runtime-core.c  sensorium-runtime-i2c.c  sensorium-runtime-internal.h  sensorium-runtime-spi.c  sensorium-runtime-transport.c  sensorium-runtime-uart-internal.h  sensorium-runtime-uart-queue.c  sensorium-runtime-uart-tty.c  sensorium-runtime-uart.c  sensorium-runtime.c  sensorium-sensor.c  sensorium-transport-alias-i2c.c  sensorium-transport-alias-internal.h  sensorium-transport-alias-spi.c  sensorium-transport-alias-uart.c  sensorium-transport-alias.c  sensorium.h
scripts/: build-deb-package.sh  build-libcamera-capture.sh  check-repo.sh  dist-source.sh  install-deps-ubuntu.sh  list-sensorium-sensors.sh  package-common.sh  prepare-wsl-kernel-tree.sh  provision-droplet.sh  reload-sensorium.sh  remote-benchmark-matrix.sh  remote-benchmark.sh  remote-build-libcamera-capture.sh  remote-common.sh  remote-cycle.sh  (+15 more)
(+158 files in other folders)
